--- a/xp/index.html
+++ b/xp/index.html
@@ -1,156 +1,173 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0"
-    />
-    <title>xp</title>
-    <link rel="icon" type="image/png" href="../favicon.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
-  </head>
-  <body style="font-family: sans-serif; user-select: none">
-    <div id="cont">
-      <input id="priv" placeholder="private" />
-      <button id="x" onclick="x()" disabled>x</button>
-      <input id="pub" placeholder="public" />
-      <button id="p" onclick="p()" disabled>p</button>
-      <input id="shared" placeholder="shared" readonly />
-    </div>
-    <div>
-      <small>
-        <span id="version"></span>
-      </small>
-    </div>
-    <div>
-      <small>
-        <a id="link" href="../">geheim</a>
-      </small>
-    </div>
-    <script src="../wasm_exec.js"></script>
-    <script src="../version.js"></script>
-    <script>
-      window.addEventListener('load', () => {
-        const $cont = document.querySelector('#cont');
-        const $priv = document.querySelector('#priv');
-        const $x = document.querySelector('#x');
-        const $pub = document.querySelector('#pub');
-        const $p = document.querySelector('#p');
-        const $shared = document.querySelector('#shared');
-        const $version = document.querySelector('#version');
-        const $link = document.querySelector('#link');
-        if (self !== top) {
-          document.body.style.margin = '0';
-          $cont.style.display = 'flex';
-          $cont.style.flexDirection = 'column';
-          $cont.style.gap = '4px';
-          $priv.readOnly = true;
-          $priv.type = $shared.type = 'password';
-          $x.textContent = 'Share';
-          $p.textContent = 'Generate';
-          $version.style.display = $link.style.display = 'none';
+<head>
+  <meta charset="utf-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0"
+  />
+  <title>xp</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
+</head>
+<body style="font-family: sans-serif; user-select: none">
+  <div id="flex">
+    <input id="priv" placeholder="private" />
+    <button id="x" onclick="x()" disabled>x</button>
+    <input id="pub" placeholder="public" />
+    <button id="p" onclick="p()" disabled>p</button>
+    <input id="shared" placeholder="shared" readonly />
+  </div>
+  <div>
+    <small>
+      <span id="version"></span>
+    </small>
+  </div>
+  <div>
+    <small>
+      <a id="link" href="../">geheim</a>
+    </small>
+  </div>
+<script src="../wasm_exec.js"></script>
+<script src="../version.js"></script>
+<script>
+window.addEventListener('load', () => {
+  const $flex = document.querySelector('#flex');
+  const $priv = document.querySelector('#priv');
+  const $x = document.querySelector('#x');
+  const $pub = document.querySelector('#pub');
+  const $p = document.querySelector('#p');
+  const $shared = document.querySelector('#shared');
+  const $version = document.querySelector('#version');
+  const $link = document.querySelector('#link');
+  if (self !== top) {
+    document.body.style.margin = '0';
+    $flex.style.display = 'flex';
+    $flex.style.flexDirection = 'column';
+    $flex.style.gap = '4px';
+    $priv.readOnly = true;
+    $priv.type = $shared.type = 'password';
+    $x.textContent = 'Share';
+    $p.textContent = 'Generate';
+    $version.style.display = $link.style.display = 'none';
+  }
+  let directive = '';
+  const run = async () => {
+    setReady(false);
+    await sleep();
+    go.argv = [
+      'xp',
+      directive,
+      $priv.value,
+      ...($pub.value ? [$pub.value] : []),
+    ];
+    await go.run(inst);
+    inst = await WebAssembly.instantiate(mod, go.importObject);
+    setReady(true);
+  };
+  window.p = async () => {
+    directive = 'p';
+    await run();
+  };
+  window.x = async () => {
+    directive = 'x';
+    await run();
+  };
+  const REGEX = /^(?:(priv|pub)\s+)?([a-f\d]+)$/i;
+  const copy = async (text) => {
+    try {
+      await navigator.clipboard.writeText(text);
+    } catch {}
+  };
+  const paste = async () => {
+    try {
+      const text = await navigator.clipboard.readText();
+      const m = REGEX.exec(text.trim());
+      if (m) return m[2];
+    } catch {}
+  };
+  $pub.addEventListener('focus', async () => {
+    const text = await paste();
+    if (text) $pub.value = text;
+  });
+  const { log } = console;
+  console.log = (...args) => {
+    log(...args);
+    const argstr = args.join(' ');
+    if (['panic:', 'error:'].some((v) => argstr.includes(v))) {
+      alert(argstr);
+      return;
+    }
+    if (directive === 'p') {
+      const lines = argstr.split('\n');
+      let ok = false;
+      for (const line of lines) {
+        const m = REGEX.exec(line.trim());
+        if (m) {
+          switch (m[1]) {
+            case 'priv': {
+              $priv.value = m[2];
+              ok = true;
+              break;
+            }
+            case 'pub': {
+              $pub.value = m[2];
+              ok = true;
+              break;
+            }
+          }
         }
-        let directive = '';
-        const run = async () => {
-          setReady(false);
-          await sleep();
-          go.argv = [
-            'xp',
-            directive,
-            $priv.value,
-            ...($pub.value ? [$pub.value] : []),
-          ];
-          await go.run(inst);
-          inst = await WebAssembly.instantiate(mod, go.importObject);
-          setReady(true);
-        };
-        window.p = async () => {
-          directive = 'p';
-          await run();
-        };
-        window.x = async () => {
-          directive = 'x';
-          await run();
-        };
-        const regex = /^(?:(priv|pub)\s+)?([a-f\d]+)$/;
-        const _log = console.log;
-        console.log = (...args) => {
-          _log(...args);
-          const argstr = args.join(' ');
-          if (['panic:', 'error:'].some((v) => argstr.includes(v))) {
-            alert(argstr);
-            return;
-          }
-          if (directive === 'p') {
-            const lines = argstr.split('\n');
-            let ok = false;
-            for (const line of lines) {
-              const m = regex.exec(line);
-              if (m) {
-                switch (m[1]) {
-                  case 'priv': {
-                    $priv.value = m[2];
-                    ok = true;
-                    break;
-                  }
-                  case 'pub': {
-                    $pub.value = m[2];
-                    ok = true;
-                    break;
-                  }
-                }
-              }
-            }
-            if (ok) {
-              $shared.value = '';
-            }
-          } else if (directive === 'x') {
-            const m = regex.exec(argstr);
-            if (m && !m[1]) {
-              $shared.value = m[2];
-              parent.postMessage({ shared: m[2] }, '*');
-            }
-          }
-        };
-        _log('geheim', __version__);
-        $version.textContent = __version__;
-        const sleep = (t = 0) =>
-          new Promise((r) => {
-            setTimeout(r, t);
-          });
-        const setReady = (x) => {
-          $x.disabled = $p.disabled = !x;
-        };
-        const go = new Go();
-        let mod, inst;
-        WebAssembly.instantiateStreaming(
-          Promise.race([
-            fetch('xp.wasm'),
-            fetch(
-              'https://cdn.jsdelivr.net/gh/jamesliu96/geheimnis/xp/xp.wasm'
-            ),
-          ]),
-          go.importObject
-        )
-          .then((result) => {
-            mod = result.module;
-            inst = result.instance;
-            setReady(true);
-          })
-          .catch((err) => {
-            console.log('error:', err);
-          });
-      });
-    </script>
-  </body>
+      }
+      if (ok) {
+        $shared.value = '';
+        copy($pub.value);
+      }
+    } else if (directive === 'x') {
+      const m = REGEX.exec(argstr);
+      if (m && !m[1]) {
+        $shared.value = m[2];
+        parent.postMessage({ shared: m[2] }, '*');
+      }
+    }
+  };
+  log('geheim', __version__);
+  $version.textContent = __version__;
+  const sleep = (t = 0) =>
+    new Promise((r) => {
+      setTimeout(r, t);
+    });
+  const setReady = (x) => {
+    $x.disabled = $p.disabled = !x;
+  };
+  const go = new Go();
+  let mod, inst;
+  WebAssembly.instantiateStreaming(
+    Promise.race([
+      fetch('xp.wasm'),
+      fetch(
+        'https://cdn.jsdelivr.net/gh/jamesliu96/geheimnis/xp/xp.wasm'
+      ),
+    ]),
+    go.importObject
+  )
+    .then((result) => {
+      mod = result.module;
+      inst = result.instance;
+      setReady(true);
+    })
+    .catch((err) => {
+      console.log('error:', err);
+    });
+});
+</script>
+</body>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z1MRNCW1H0"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
 
-  gtag('config', 'G-Z1MRNCW1H0');
+gtag('config', 'G-Z1MRNCW1H0');
 </script>
 </html>
