--- a/xp/index.html
+++ b/xp/index.html
@@ -49,6 +49,7 @@ window.addEventListener('load', () => {
     $priv.type = $shared.type = 'password';
     $x.textContent = 'Share';
     $p.textContent = 'Generate';
+    $priv.style.fontFamily = $x.style.fontFamily = $pub.style.fontFamily = $p.style.fontFamily = $shared.style.fontFamily = 'source-code-pro, Menlo, Monaco, Consolas, \'Courier New\', monospace;';
     $version.style.display = $link.style.display = 'none';
   }
   let directive = '';
