--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 window.__x__ = {};
 </script>
 <script>
-window.addEventListener('load', () => {
+addEventListener('load', () => {
   window.$archive = document.querySelector('#archive');
   window.$decrypt = document.querySelector('#decrypt');
   window.$console = document.querySelector('#console');
