--- a/xp/index.html
+++ b/xp/index.html
@@ -2,10 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0"
-  />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0" />
   <title>xp</title>
   <link rel="icon" type="image/png" href="../favicon.png" />
   <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
@@ -145,9 +142,7 @@ addEventListener('load', () => {
   WebAssembly.instantiateStreaming(
     Promise.race([
       fetch('xp.wasm'),
-      fetch(
-        'https://cdn.jsdelivr.net/gh/jamesliu96/geheimnis/xp/xp.wasm'
-      ).catch(() => {}),
+      fetch('https://cdn.jsdelivr.net/gh/jamesliu96/geheimnis@master/xp/xp.wasm'),
     ]),
     go.importObject
   )
@@ -165,7 +160,7 @@ addEventListener('load', () => {
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z1MRNCW1H0"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
+function gtag() { dataLayer.push(arguments); }
 gtag('js', new Date());
 
 gtag('config', 'G-Z1MRNCW1H0');
