--- a/xp/index.html
+++ b/xp/index.html
@@ -142,7 +142,7 @@ addEventListener('load', () => {
   WebAssembly.instantiateStreaming(
     Promise.race([
       fetch('xp.wasm'),
-      fetch('https://cdn.jsdelivr.net/gh/jamesliu96/geheimnis@master/xp/xp.wasm'),
+      fetch('https://cdn.jsdelivr.net/gh/jamesliu96/geheimnis@master/xp/xp.wasm').catch(() => new Promise(() => {})),
     ]),
     go.importObject
   )
